--- a/codegrader/package.json
+++ b/codegrader/package.json
@@ -40,6 +40,7 @@
     "primeng": "^20.0.1",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.5",
     "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
