--- a/codegrader/package.json
+++ b/codegrader/package.json
@@ -37,6 +37,7 @@
     "express": "^5.1.0",
     "flowbite": "^3.1.2",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
