--- a/codegrader/package.json
+++ b/codegrader/package.json
@@ -34,6 +34,7 @@
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "flowbite": "^3.1.2",
     "postcss": "^8.5.6",
