--- a/codegrader/package.json
+++ b/codegrader/package.json
@@ -35,6 +35,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
     "express": "^5.1.0",
     "flowbite": "^3.1.2",
     "jwt-decode": "^4.0.0",
